誤字の修正

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Header menu -->
     <header>
-      <h1>グランディ数の探索プログラム</h1>
+      <h1>グランディ数列の探索プログラム</h1>
     </header>
     <!-- Main menu -->
     <main>
