--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <!-- Main menu -->
     <main>
       <p>カンマ区切り、空白無しでGの中身を入力</p>
-      <input type="text" id="in" name="name" size="50">
+      <input type="text" id="in" size="50">
+      <p>計算する項数</p>
+      <input type="text" id="getLength" size="10" value="200">
       <input type="button" id="start" name="name" size="50" value="計算する">
       <table>
       </table>
