文章の修正

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <!-- Main menu -->
     <main>
-      <p>カンマ区切り、空白無しでGの中身を入力</p>
+      <p>カンマ区切り、空白無しで取れる数の集合の中身を入力</p>
       <input type="text" id="in" size="50">
       <p>計算する項数</p>
       <input type="text" id="getLength" size="10" value="200">
