--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <p>計算する項数</p>
       <input type="text" id="getLength" size="10" value="200">
       <input type="button" id="start" name="name" size="50" value="計算する">
+      <input type="button" id="period_button" name="name" size="50" value="周期を計算する">
       <table>
       </table>
     </main>
