表示方法を変更

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>計算する項数</p>
       <input type="text" id="getLength" size="10" value="200">
       <input type="button" id="start" name="name" size="50" value="計算する">
-      <table>
+      <table id="result_table">
       </table>
     </main>
 
