cssのリンクの更新

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>31Game</title>
 
     <!-- CSS load -->
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./style.css"> -->
+    <link rel="stylesheet" type="text/css" href="https://ack61.github.io/mathpower2022-31game/style.css">
 
     <!-- JS load -->
 
