--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p>カンマ区切り、空白無しで取れる数の集合の中身を入力</p>
       <div class="option">
         <div>S={</div>
-        <input type="text" id="in" size="50">
+        <input type="text" id="in" size="50" placeholder="2,5,7">
         <div>}</div>
       </div>
 
