無限に計算できるモードを追加

--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
       <ul>
         <li>
           <div class="option">
-            <input type="button" id="period_button" name="name" size="50" value=" 周期を計算する">
+            <input type="button" id="period_button" name="name" size="50" value=" 計算する">
+          </div>
+        </li>
+        <li>
+          <div class="option">
+            <input type="button" id="only_period_button" name="name" size="50" value=" 周期のみ計算する">
+            <div>(pre-periodなどを計算できない代わりにメモリを気にせず無限に計算できます)</div>
           </div>
         </li>
         <li>
